Questão 5 - Melhora a documentação swagger e altera a estrutura de pastas do projeto
